--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+    <script src="https://kit.fontawesome.com/dd1e4573ce.js" crossorigin="anonymous"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
